--- a/styles/common.css
+++ b/styles/common.css
@@ -272,3 +272,8 @@ h1 {
     overflow-x: auto;
     white-space: nowrap;
 }
+
+div:focus, div:active, img:focus, img:active, .back-btn:active {
+    outline: none;
+    color: inherit;
+}
